--- a/index.Rmd
+++ b/index.Rmd
@@ -19,3 +19,41 @@ Statistics and Genomic Unit, University of Pavia, Italy.
 
 The course was taught by Jonah Gabry, from [Columbia University](https://www.columbia.edu/), and Leonardo Egidi, from 
 [University of Trieste](https://www.units.it/en).
+
+## Settings {-}
+
+Here, there are the libraries loaded during the course, w/ the relative options,
+plus some packages and options useful to write code more understandable by
+humans obtaining nicer output.
+
+```{r setup, message=FALSE, warning=FALSE}
+# Packages for the analyses
+library(rstan)                                     # R interface to Stan
+
+# Package(s) for data management 
+library(tidyverse)            # Imports the principal tidyverse packages
+
+# Document output options
+knitr::opts_chunk$set(
+  comment     = '#>',
+	echo        = TRUE,                              # Render all the code
+	message     = FALSE,                          # Do net render messages
+	warning     = FALSE,                          # Do not render warnings
+	fig.height  = 4.4,         # height to allow two figures in a PDF page
+	cache.extra = knitr::rand_seed # cache seeds to assure reproducibility
+)
+```
+
+The following code create the packages.bib files which is the BibTeX lists of
+all the packages references we have loaded.
+
+```{r}
+# Automatically create a bib database for the loaded packages
+knitr::write_bib(
+  c(
+    .packages(), 'bookdown', 'knitr', 'rmarkdown', 'knitr',
+    'tidyverse', 'rstan'
+  ),
+  file = 'packages.bib'
+)
+```
