--- a/packages.bib
+++ b/packages.bib
@@ -13,12 +13,33 @@
   note = {R package version 1.6.0},
   url = {https://CRAN.R-project.org/package=bayesplot},
 }
+@Manual{R-bindrcpp,
+  title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
+  author = {Kirill Müller},
+  year = {2018},
+  note = {R package version 0.2.2},
+  url = {https://CRAN.R-project.org/package=bindrcpp},
+}
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   note = {R package version 0.7.18},
   url = {https://github.com/rstudio/bookdown},
   year = {2018},
+}
+@Manual{R-covr,
+  title = {covr: Test Coverage for Packages},
+  author = {Jim Hester},
+  year = {2018},
+  note = {R package version 3.1.0},
+  url = {https://CRAN.R-project.org/package=covr},
+}
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang},
+  year = {2018},
+  note = {R package version 1.13.6},
+  url = {https://CRAN.R-project.org/package=devtools},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
@@ -90,6 +111,13 @@
   note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=stringr},
 }
+@Manual{R-testthat,
+  title = {testthat: Unit Testing for R},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 2.0.0},
+  url = {https://CRAN.R-project.org/package=testthat},
+}
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
@@ -110,4 +138,11 @@
   year = {2017},
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
+}
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2018},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=usethis},
 }
