Update lesson 1 and 2
Update keynotes of lesson 1 and 2

--- a/book.bib
+++ b/book.bib
@@ -22,4 +22,19 @@
  year = {1995}
 }
 
+@article{hoffman_gelman_2014,
+ author = {Homan, Matthew D. and Gelman, Andrew},
+ title = {The No-U-turn Sampler: Adaptively Setting Path Lengths in Hamiltonian Monte Carlo},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {January 2014},
+ volume = {15},
+ number = {1},
+ month = jan,
+ year = {2014},
+ issn = {1532-4435},
+ pages = {1593--1623},
+ numpages = {31}
+ acmid = {2638586}
+ keywords = {Bayesian inference, Hamiltonian Monte Carlo, Markov chain Monte Carlo, adaptive Monte Carlo, dual averaging},
+}
 
