--- a/book.bib
+++ b/book.bib
@@ -38,3 +38,19 @@
  keywords = {Bayesian inference, Hamiltonian Monte Carlo, Markov chain Monte Carlo, adaptive Monte Carlo, dual averaging},
 }
 
+@article{vehtari_2017,
+author = "Vehtari, Aki
+and Gelman, Andrew
+and Gabry, Jonah",
+title = "Practical Bayesian model evaluation using leave-one-out cross-validation and WAIC",
+journal = "Statistics and Computing",
+year = "2017",
+month = "Sep",
+day = "01",
+volume = "27",
+number = "5",
+pages = "1413--1432",
+doi = "10.1007/s11222-016-9696-4",
+url = "https://doi.org/10.1007/s11222-016-9696-4"
+}
+
